--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
  - npm install -g yarn
 
 script:
- - npm run-script build
+ - yarn build
 deploy:
  provider: pages
  skip_cleanup: true
